06/17/17
- Added some information on projects
- Fixed headers in CSS

06/16/17
- Added slide show to projects_employee.html

06/15/17
- Fixed navigation links to reflect new website location
- Cleaned and reorganized CSS

06/14/17
- Fixed issue with modal overflow in graphics_gallery.html
- Fixed issue of images not showing up in graphics_gallery.html
- Fixed alignment issues with CSS
- Removed black border around the edge of the pages
- Updated graphics_gallery.html
- Added page loader to all pages. The page loader plays an animation until the page has finished loading then displays the page.

06/13/17
- Replaced the last of the placeholder images.
- Added more content for the project pages and contact page.
- Pushed the final version of Projects Blog V1 to Projects-Blog-V1 branch
- Changed image links in pages for Projects-Blog-V1 branch back to relative instead of absolute. This is to preserve the original images because the images stored in the external website had already been changed for Projects Blog V2.

06/11/17
- Created Projects-Blog-V1 Branch as backup
- Replaced half of the placeholder images
- Finished redoing the layouts for the whole website

06/10/17
- Continued to redo the layout for the rest of the site.

06/09/17
- Reworked some of the layout and removed background images

06/08/17
- Added docs/changelog.txt
- Moved image files to a different web host.

06/07/17
- Updated README.md
- Compressed image files.
- Added template.html

06/06/17
- Added README.md
- Uploaded website and all files related to GitHub

06/05/17
- Updated Navigation Bar
- Split navigation, header, and footer to different files
- Updated CSS for all pages
- Added tools_scripts.html
- Added tools_discord.html
- Added projects_server.html
- Added projects_employee.html
- Added projects_bayes.html
- Added graphics_gallery.html
- Added graphics_pathfinder.html
- Added calculators_bandwidth.html

06/04/17
- Worked on CSS and layouts

06/03/17
- Added tools.html