@@ -19,7 +19,7 @@
             <div class="wrapper">      
                 <!-- About me -->
                 <div align="center" id="about">
-                    <h3 class="spacing_medium">About me</h3>
+                    <h3 class="spacing_medium">- About me -</h3>
                     <p>Hello there! Welcome to my web site. The web site showcases some of my projects that I have created and shared on GitHub.</p>
                     <p align="justify">
                         As for me, I am an undergraduate Computer Science student. I hope to be able to become a developer one day. The language that I mainly use is 
@@ -31,7 +31,7 @@
                 </div>
                 <!-- Contact -->
                 <div align="center" id="contact">
-                    <h3>Contact</h3>
+                    <h3>- Contact -</h3>
                     <p>If you have any questions, feel free to contact me via email.</p>
                     <p>Email: diane.m.truong@gmail.com</p>
                 </div>
