@@ -25,7 +25,7 @@
             <div class="clear" id="container">
                 <!-- Center Image -->
                 <section id="slideshow"> 
-                    <div style="max-width: 870px">
+                    <div style="max-width: 870px;">
                         <img src="https://dmctruong.000webhostapp.com/images/index_overlay.png" class="overlay" >
                         <a href="graphics_pathfinder.html" class="image_slides animate-fading" ><img src="https://dmctruong.000webhostapp.com/images/index_cover1.png" alt=""></a>
                         <a href="404.html" class="image_slides animate-fading" ><img src="https://dmctruong.000webhostapp.com/images/index_cover2.png" alt=""></a>
@@ -34,22 +34,23 @@
                 </section>
                 <!-- Categories -->
                 <div id="content" style="width: 860px;">
-                    <h4>Hello, welcome to my website.</h4>
-                    <section>
+                    <section class="index_grad clear">
+                            <h4>Hello, welcome to my website.</h4>
                             <p align="center">This is a website of miscellous projects. It is all created as an intellectual challenge for myself. Feel free to browse around, maybe one of the projects may turn out to be useful for you!</p>	
                     </section>
+                    <div align="center"><img src="https://dmctruong.000webhostapp.com/images/logo.png" width="100px" height="100px"></div>
                     <!-- About -->
                     <section id="projects">
-                        <h2 class="spacing_large">About the Site Categories.</h2>
+                        <h2 class="spacing_large clear">About the Site Categories</h2>
                         <ul>
                             <!-- Class Projects Category -->
                             <li>
                                 <article class="clear">
-                                    <figure><img src="https://dmctruong.000webhostapp.com/images/index_projects.png" class="circle_image"  alt="">
+                                    <figure><img src="https://dmctruong.000webhostapp.com/images/index_projects.png" class="rectangle_image"  alt="">
                                         <figcaption>
-                                            <h3>Class Projects</h3>
+                                            <h2>Class Projects</h2>
                                             <p>This category contains a few projects that were created in class.</p>
-                                            <footer class="more"><a href="projects.html">Read More &raquo;</a></footer>
+                                            <footer class="read_more"><a href="projects.html">Read More &raquo;</a></footer>
                                         </figcaption>
                                     </figure>
                                 </article>                               
@@ -57,23 +58,23 @@
                             <!-- Computer Graphics Category -->
                             <li>
                                 <article class="clear">
-                                    <figure><img src="https://dmctruong.000webhostapp.com/images/index_graphics.png" class="circle_image" alt="">
+                                    <figure><img src="https://dmctruong.000webhostapp.com/images/index_graphics.png" class="rectangle_image" alt="">
                                         <figcaption>
-                                            <h3>Computer Graphics</h3>
+                                            <h2>Computer Graphics</h2>
                                             <p>Here, all of the projects related to computer graphics is gathered.</p>
-                                            <footer class="more"><a href="graphics.html">Read More &raquo;</a></footer>
+                                            <footer class="read_more"><a href="graphics.html">Read More &raquo;</a></footer>
                                         </figcaption>
                                     </figure>
                                 </article>                               
                             </li>
                             <!-- Tools Category -->
                             <li>
-                                <article class="clear">
-                                    <figure><img src="https://dmctruong.000webhostapp.com/images/index_tools.png" class="circle_image" alt="">
+                                <article class="index_last clear">
+                                    <figure><img src="https://dmctruong.000webhostapp.com/images/index_tools.png" class="rectangle_image" alt="">
                                         <figcaption>
-                                            <h3>Tools/Helpers</h3>
+                                            <h2>Tools/Helpers</h2>
                                             <p>This category contains a few tools or helpers that are created to help the user with various tasks.</p>
-                                            <footer class="more"><a href="tools.html">Read More &raquo;</a></footer>
+                                            <footer class="read_more"><a href="tools.html">Read More &raquo;</a></footer>
                                         </figcaption>
                                     </figure>
                                 </article>			
