@@ -2,8 +2,8 @@
 <div class="wrapper navigation">
     <header id="header">
         <div id="heading" align = "center" style="width: 860px;">
-            <h1 style="font-size: 30px; font-weight: normal; text-transform: none;"><a href="index.html">DMCT</a></h1>
-            <h1 style="font-size: 13px; font-weight: normal; text-transform: none;">DMCTruong - Blog of Miscellaneous Projects</h1>
+            <h1 style="padding-top: 20px; font-size: 30px; font-weight: normal; text-transform: none;"><a href="index.html">DMCT</a></h1>
+            <h1 style="padding-bottom: 30px; font-size: 13px; font-weight: normal; text-transform: none;">DMCTruong - Blog of Miscellaneous Projects</h1>
         </div>
 
 
