@@ -22,12 +22,12 @@
                 <p align="center">Notice! This website is still under construction so some pages may be incomplete.</p> 
             </div>
             <!-- Bayes -->
-            <div class="bayes" align="center">
+            <div align="center">
                 <h2 class="spacing_large">Naive Bayes Classifier Implementation</h2>
                 
                 
                 <!-- Classification -->
-                <h3 style="text-transform: none;">Classification</h3>
+                <h3 id="bayes_h3">Classification of Data</h3>
                 <p align="justify">
                     A <b>classifier</b> is able to sort data in the appropriate categories based on a set of training data containing 
                     information whose category membership is known. An example would be trying to figure out if a mail is spam or not a spam.
@@ -36,7 +36,7 @@
 
 
                 <!-- Naive Bayes Classifier -->
-                <h3 style="text-transform: none;">What is a Naive Bayes Classifier? </h3>
+                <h3 id="bayes_h3">What is a Naive Bayes Classifier? </h3>
                 <p align="justify">
                     <b>Naive Bayes Classifier</b> is a probabilistic classifier that can sort data into the appropriate 
                     categories using Bayes' Theorem.The Bayes' theorem is shown below.
@@ -53,7 +53,7 @@
                 
                 <!-- What can it be used for? -->
                 <div style="padding: 50px;">
-                    <h3 style="text-transform: none;">What can it be used for?</h3>
+                    <h3 id="bayes_h3">What can it be used for?</h3>
                     <p>A classifier can be used for many things. But to name a few, a classifier may be used for: </p>
                     <div id="bayes" align="left">
                         <ul>
