@@ -1,3 +1,3 @@
 <link rel="stylesheet" href="css/layout.css" type="text/css">
 <link rel='stylesheet' type='text/css' href='https://www.x3dom.org/download/x3dom.css'/>
-<link href="https://fonts.googleapis.com/css?family=Indie+Flower|Quicksand|Raleway" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css?family=Quicksand|Raleway|Josefin+Sans" rel="stylesheet"> 
