@@ -30,7 +30,7 @@
                                     <figcaption>
                                         <h3>Git Bash Scripts</h3>
                                         <p>Some simple scripts created for Git Bash to make the work flow more efficient.</p>
-                                        <footer class="more"><a href="tools_scripts.html">Read More &raquo;</a></footer>
+                                        <footer class="read_more"><a href="tools_scripts.html">Read More &raquo;</a></footer>
                                     </figcaption>
                                 </figure>
                             </article>                               
